Changed how the user boxes work so now they expand if there is more stuff that is in them than can be fit

--- a/static/style.css
+++ b/static/style.css
@@ -34,7 +34,7 @@
 
 .userBox {
     width: 300px;
-    height: 300px;
+    height: auto;
     background-color: white;
     margin-left: 20px;
     margin-top: 10px;
