--- a/templates/configureCourse.html
+++ b/templates/configureCourse.html
@@ -100,13 +100,13 @@
 <p style="text-align: center">{{ message }}</p>
 
 <div class="userContainer">
-{# displays in the order of course name, all instructors, and all labs and their respective ta #}
+    {# displays in the order of course name, all instructors, and all labs and their respective ta #}
     {% for course in courses %}
         <div class="userBox">
             <h2>{{ course.name }}</h2>
             <p><b>Instructors</b><br/>
-            {% for instructor in course.instructors.all %}
-                {{ instructor }}<br/>
+                {% for instructor in course.instructors.all %}
+                    {{ instructor }}<br/>
                 {% endfor %}
             <div class="edit-course-modal" popover id="editCourseModal {{ course.id }}">
                 <h2>Edit Course info:</h2>
@@ -133,14 +133,6 @@
                                     {% endfor %}
                                 </div>
                             </div>
-                            {% for lab in labs %}
-                                {% if lab.course.name == course.name %}
-                                    <div>
-                                        <label class="form-label required">Lab Name</label>
-                                        <input type="text" name="lab" class="form-control" value="{{ lab }}">
-                                    </div>
-                                {% endif %}
-                            {% endfor %}
                         </div>
                         <div class="modal-footer">
                             <button type="submit" class="btn btn-primary">Save</button>
@@ -154,56 +146,60 @@
                 </div>
             </div>
             <button popovertarget="editCourseModal {{ course.id }}">Edit Course</button>
-                <br/><br/>
-                <b>TAs and Labs</b><br/>
-                {% for lab in labs %}
-                    {% if lab.course.name == course.name %}
-                        {{ lab.ta }}<br/>
-                        {{ lab }}<br/>
-                        <div class="edit-course-modal" popover id="editCourseModal {{ course.id }}">
-                <h2>Edit Course info:</h2>
-                <div class="modal-header" id="myModal {{ course.id }}">
-                    <form method="POST" action="{% url 'configure_course' %}">
-                        <div class="modal-dialog">
-                            {% csrf_token %}
-                            <input type="hidden" name="form_name" value="edit_lab">
-                            <div>
-                                <label class="form-label required">Course Name</label>
-                                <input type="text" name="name" class="form-control" value="{{ course.name }}">
-                            </div>
-                            <div>
-                                <label class="form-label required">Instructors</label>
-                                <div class="instructor-checkboxes">
-                                    {% for instructor in instructors %}
-                                        <div>
-                                            <input type="checkbox"
-                                                   name="instructor[]"
-                                                   value="{{ instructor.id }}"
-                                                   {% if instructor in course.instructors.all %}checked{% endif %}>
-                                            <label>{{ instructor }}</label>
-                                        </div>
+            <br/><br/>
+            <b>TAs and Labs</b><br/>
+            {% for lab in labs %}
+                {% if lab.course.name == course.name %}
+                    {{ lab.ta }}<br/>
+                    {{ lab }}<br/>
+                    <div class="edit-lab-modal" popover id="editLabModal {{ lab.id }}">
+                        <h2>Edit Lab info:</h2>
+                        <div class="modal-header" id="myModal {{ lab.id }}">
+                            <form method="POST" action="{% url 'configure_course' %}">
+                                <div class="modal-dialog">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="form_name" value="edit_lab">
+                                    {% for lab in labs %}
+                                        {% if lab.course.name == course.name %}
+                                            <div>
+                                                <label class="form-label required">Lab Name</label>
+                                                <input type="text" name="lab" class="form-control" value="{{ lab }}">
+                                            </div>
+                                        {% endif %}
                                     {% endfor %}
+                                    <div>
+                                        <label class="form-label required">TAs</label>
+                                        <div class="ta-checkboxes">
+                                            {% for ta in tas %}
+                                                <div>
+                                                    <input type="checkbox"
+                                                           name="ta[]"
+                                                           value="{{ ta.id }}"
+                                                           {% if ta in lab.ta.all %}checked{% endif %}>
+                                                    <label>{{ ta }}</label>
+                                                </div>
+                                            {% endfor %}
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary">Save</button>
-                            <button type="button" class="btn btn-secondary"
-                                    popovertarget="editCourseModal {{ course.id }}"
-                                    popovertargetaction="hide">
-                                Cancel
-                            </button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <button popovertarget="editCourseModal {{ course.id }}">Edit Lab</button>
-                        <br/><br/>
-                    {% endif %}
-                {% endfor %}
-                <br/>
-            </p>
 
+                                <div class="modal-footer">
+                                    <button type="submit" class="btn btn-primary">Save</button>
+                                    <button type="button" class="btn btn-secondary"
+                                            popovertarget="editLabModal {{ lab.id }}"
+                                            popovertargetaction="hide">
+                                        Cancel
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <button popovertarget="editLabModal {{ lab.id }}">Edit Lab</button>
+                    <br/><br/>
+                {% endif %}
+            {% endfor %}
+            <br/>
+            </p>
         </div>
     {% endfor %}
 </div>
