Some visual fixes and adding logo to top left with hyperlink to home

--- a/templates/admin_Home.html
+++ b/templates/admin_Home.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="/static/style.css"/>
 </head>
 <body style="background-color: rgb(217,217,217)">
-<h1>Home Page For Admins</h1>
-<h1>Accessible via Home Page Through a Button and User has Admin Permission</h1>
-<br/><a href="home.html">TA Scheduler</a>
+<a href="home.html">
+    <img src="/static/Logo2.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
+</a>
     <div class="navbar">
         <a href="configureUser.html" style="padding: 150px">Configure Users</a>
         <a href="configureCourse.html" style="padding: 150px">Configure Courses</a>
