--- a/templates/configureUser.html
+++ b/templates/configureUser.html
@@ -7,7 +7,9 @@
 </head>
 <body style="background-color: rgb(217,217,217)">
 {#    <br/><a href="/templates/home.html">TA Scheduler</a>#}
-<br/><a href="home.html">TA Scheduler</a>
+<a href="home.html">
+    <img src="/static/Logo2.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
+</a>
 <div class="navbar">
         <a class="active" href="configureUser.html" style="padding: 150px">Configure Users</a>
         <a href="configureCourse.html" style="padding: 150px">Configure Courses</a>
