--- a/templates/home.html
+++ b/templates/home.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="/static/style.css"/>
 </head>
 <body style="background-color: rgb(217,217,217)">
-<h1>Home Page After Login</h1>
-<br/><a href="home.html">TA Scheduler</a>
+<h1>Home Page</h1>
+<a href="home.html">
+    <img src="/static/Logo2.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
+</a>
     <div class="navbar">
 {#        <a href="configureUser.html">Configure Users</a>#}
 {#        <a href="">Configure Courses</a>#}
