--- a/templates/course_Directory.html
+++ b/templates/course_Directory.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="/static/style.css"/>
 </head>
 <body style="background-color: rgb(217,217,217)">
-<h1>Course Directory</h1>
-<a href="home.html">TA Scheduler</a>
+<a href="home.html">
+    <img src="/static/Logo2.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
+</a>
 
 <div class="navbar">
         <a href="admin_Home.html" style="padding: 110px">Admin Home</a>
