Definitions for the rest of the integration tests and new logo

--- a/templates/admin_Home.html
+++ b/templates/admin_Home.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color: rgb(217,217,217)">
 <a href="home.html">
-    <img src="/static/Logo2.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
+    <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
 </a>
     <div class="navbar">
         <a href="configureUser.html" style="padding: 150px">Configure Users</a>
