--- a/templates/configureCourse.html
+++ b/templates/configureCourse.html
@@ -8,7 +8,7 @@
 <body style="background-color: rgb(217,217,217)">
 {#    <br/><a href="/templates/home.html">TA Scheduler</a>#}
 <a href="home.html">
-    <img src="/static/Logo2.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
+    <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
 </a>
 <div class="navbar">
     <a href="configureUser.html" style="padding: 150px">Configure Users</a>
