--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 <body style="background-color: rgb(217,217,217)">
 <h1>Home Page</h1>
 <a href="home.html">
-    <img src="/static/Logo2.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
+    <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
 </a>
     <div class="navbar">
 {#        <a href="configureUser.html">Configure Users</a>#}
@@ -20,6 +20,6 @@
         <a href="/" style="padding: 110px">Log Out</a>
     </div>
     <p style="text-align: center">{{ message }}
-        <img src="/static/Logo2.jpeg" alt="logo" width="500" height="500"></img>
+        <img src="/static/Logo.jpeg" alt="logo" width="500" height="500"></img>
 </body>
 </html>
