remove login hyperlink and fix home page logo scaling

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,6 @@
         <a href="/" style="padding: 110px">Log Out</a>
     </div>
     <p style="text-align: center">{{ message }}
-        <img src="/static/Logo.jpeg" alt="logo" width="500" height="500"></img>
+        <img src="/static/Logo.jpeg" alt="logo" style="width:auto; height:500px"></img>
 </body>
 </html>
