Refactored the file names of the templates so they all follow the same naming convention

--- a/templates/course_directory.html
+++ b/templates/course_directory.html
@@ -11,9 +11,9 @@
 </a>
 
 <div class="navbar">
-        <a href="admin_Home.html" style="padding: 110px">Admin Home</a>
-        <a href="user_Directory.html" style="padding: 110px">User Directory</a>
-        <a class="active" href="course_Directory.html" style="padding: 110px">Course Directory</a>
+        <a href="admin_home.html" style="padding: 110px">Admin Home</a>
+        <a href="user_directory.html" style="padding: 110px">User Directory</a>
+        <a class="active" href="course_directory.html" style="padding: 110px">Course Directory</a>
         <a href="/" style="padding: 110px">Log Out</a>
     </div>
 
@@ -21,7 +21,7 @@
     <h2 class="container">Courses:</h2>
 
     <!-- Filter Toggle -->
-    <form method="get" action="course_Directory.html" style="margin-bottom: 20px;">
+    <form method="get" action="course_directory.html" style="margin-bottom: 20px;">
         <label>
             <input type="checkbox" name="filter" value="assigned" {% if filter_assigned %}checked{% endif %}>
             Show Only Assigned Courses/Labs
