--- a/templates/home.html
+++ b/templates/home.html
@@ -11,12 +11,12 @@
     <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
 </a>
     <div class="navbar">
-{#        <a href="configureUser.html">Configure Users</a>#}
+{#        <a href="configure_user.html">Configure Users</a>#}
 {#        <a href="">Configure Courses</a>#}
 {#        <a href="">Databases</a>#}
-        <a href="admin_Home.html" style="padding: 110px">Admin Home</a>
-        <a href="user_Directory.html" style="padding: 110px">User Directory</a>
-        <a href="course_Directory.html" style="padding: 110px">Course Directory</a>
+        <a href="admin_home.html" style="padding: 110px">Admin Home</a>
+        <a href="user_directory.html" style="padding: 110px">User Directory</a>
+        <a href="course_directory.html" style="padding: 110px">Course Directory</a>
         <a href="/" style="padding: 110px">Log Out</a>
     </div>
     <p style="text-align: center">{{ message }}
