--- a/templates/user_directory.html
+++ b/templates/user_directory.html
@@ -10,9 +10,9 @@
     <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
 </a>
 <div class="navbar">
-    <a href="admin_Home.html" style="padding: 110px">Admin Home</a>
-    <a class="active" href="user_Directory.html" style="padding: 110px">User Directory</a>
-    <a href="course_Directory.html" style="padding: 110px">Course Directory</a>
+    <a href="admin_home.html" style="padding: 110px">Admin Home</a>
+    <a class="active" href="user_directory.html" style="padding: 110px">User Directory</a>
+    <a href="course_directory.html" style="padding: 110px">Course Directory</a>
     <a href="/" style="padding: 110px">Log Out</a>
 </div>
 <h2 class="container">Users:</h2>
