--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -10,11 +10,11 @@
     <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
 </a>
     <div class="navbar">
-        <a href="configureUser.html" style="padding: 150px">Configure Users</a>
-        <a href="configureCourse.html" style="padding: 150px">Configure Courses</a>
+        <a href="configure_user.html" style="padding: 150px">Configure Users</a>
+        <a href="configure_course.html" style="padding: 150px">Configure Courses</a>
         <a href="/" style="padding: 150px">Log Out</a>
 {#        <a href="">Databases</a>#}
-{#        <a class="active" href="admin_Home.html">Admin Home</a>#}
+{#        <a class="active" href="admin_home.html">Admin Home</a>#}
     </div>
 
 
