--- a/templates/profile_page.html
+++ b/templates/profile_page.html
@@ -2,22 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home | Scheduler</title>
+    <title>Profile Page | Scheduler</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body style="background-color: rgb(217,217,217)">
-<h1>Home Page</h1>
+<h1>Profile Page</h1>
 <a href="home.html">
     <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
 </a>
-<a href="profile_page.html" style="padding: 8.5%">Profile</a>
+<a href="profile_page.html" style="padding: 94%">Profile</a>
     <div class="navbar">
         <a href="admin_home.html" style="padding: 8.5%">Admin Home</a>
         <a href="user_directory.html" style="padding: 8.5%">User Directory</a>
         <a href="course_directory.html" style="padding: 8.5%">Course Directory</a>
         <a href="/" style="padding: 8.5%">Log Out</a>
     </div>
-    <p style="text-align: center">{{ message }}
-        <img src="/static/Logo.jpeg" alt="logo" style="width:auto; height:500px"></img>
 </body>
 </html>
