--- a/templates/configure_user.html
+++ b/templates/configure_user.html
@@ -66,7 +66,7 @@
                         <input type="number" class="form-control" name="phone_number">
                     </div>
                     <div>
-                        <label class="form-label ">Address</label>
+                        <label class="form-label">Address</label>
                         <input type="text" class="form-control" name="address">
                     </div>
                     <div>
@@ -163,7 +163,7 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-
+                            <button type="submit" class="btn btn-primary">Save</button>
                             <button type="button" class="btn btn-secondary" popovertarget="editModal {{ user.id }}"
                                     popovertargetaction="hide">
                                 Cancel
