Wrote acceptance tests and changed a few things other things around

--- a/templates/configure_course.html
+++ b/templates/configure_course.html
@@ -73,7 +73,7 @@
                         </div>
                         <div>
                             <label class="form-label required">Course:</label>
-                            <select name="course">
+                            <select name="section_course">
                                 <option></option>
                                 {% for i in courses %}
                                     <option>{{ i.name }}</option>
@@ -90,7 +90,7 @@
                                 {% for day, day_label in days %}
                                     <div>
                                         <input type="checkbox"
-                                               name="days"
+                                               name="section_days"
                                                value="{{ day }}"
                                                {% if section.days and day in section.days %}checked{% endif %}>
                                         <label>{{ day_label }}</label>
